update main file

--- a/main.ipynb
+++ b/main.ipynb
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 518,
    "metadata": {},
    "outputs": [
     {
@@ -873,11 +873,11 @@
     }
    ],
    "source": [
-    "msee = np.mean((y_test - y_pred) ** 2)\n",
-    "maee = np.mean(np.absolute(y_test - y_pred))\n",
-    "r22 = r2_score(y_test, y_pred)\n",
+    "mse = np.mean((y_test - y_pred) ** 2)\n",
+    "mae = np.mean(np.absolute(y_test - y_pred))\n",
+    "r2 = r2_score(y_test, y_pred)\n",
     "\n",
-    "print(f\"mean squared error : {msee} | mean absolute error : {maee} | r2 score : {r22}\".title())"
+    "print(f\"mean squared error : {mse} | mean absolute error : {mae} | r2 score : {r2}\".title())"
    ]
   },
   {
@@ -937,13 +937,6 @@
     "button2 = Button(root, text= \"Done\", command= root.destroy, width= 45, activebackground= \"black\", activeforeground= \"white\").place(x= 15, y= 260)\n",
     "root.mainloop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
